scrollbar repair, grammar and headers

--- a/docs.css
+++ b/docs.css
@@ -7284,3 +7284,7 @@ h6 {
     widows: 2;
     text-align: left;
 }
+
+p {
+    text-align: justify !important;
+}
